# teinte

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  image-analysis.md  release-notes-v0.4.0.md
src/: App.vue  setupAppMenu.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: open_color.json  tailwind_subset.json
src-tauri/src/: analyze.rs  color_theory.rs  harmony.rs  lib.rs  main.rs  meta.rs  palette_match.rs  shape_analysis.rs  theory.rs
src/components/: AnalysisSidePanel.vue  AppHeader.vue  EmptyWorkspace.vue  GlossaryModal.vue  PaletteHomeCard.vue  PdfExportSurface.vue  PickerPaletteSetBar.vue  ShapeAnalysisPanel.vue
src/composables/: useAppToast.ts  useColorAuxMode.ts  useGlossaryModal.ts  useImageAnalysisSession.ts  usePaletteDangerConfirm.ts  usePickerPaletteApp.ts  useShapeAnalysis.ts
src/constants/: glossaryJa.ts  harmonyScoreLegend.ts
src/types/: analysis.ts
src/utils/: analysisImport.test.ts  analysisImport.ts  appLog.ts  pickerPaletteImport.test.ts  pickerPaletteImport.ts  pickerPaletteStorage.ts  readJsonTextFileDialog.ts
