[package]
name = "image-metadata-tool-tauri"
version = "0.3.0"
description = "Image Data Analyzer (Tauri + Vue)"
authors = ["you"]
edition = "2021"

[lib]
name = "image_metadata_tool_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
kamadak-exif = "0.6"
chrono = "0.4"
base64 = "0.22"
